# The-Adaptive-Radix-Tree

./: README.md
Implementation/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  benchmark-set-1.bat  benchmark-set-1.sh  benchmark-set-2.bat  benchmark-set-2.sh  benchmark.cpp  benchmark.h  clock.h  main.cpp  util.h
Implementation/ART/: ART.cpp  ART.h  CMakeLists.txt  art.cpp  art.h
Implementation/Benchmark/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  Main.cpp  Trie.cpp  Trie.h  benchmark.cpp
Implementation/benchmark/: benchmark.cpp  benchmark.h  benchmark_util.h  data_structures.h  main.cpp
Implementation/benchmark/structures/: art_benchmark.h  art_crtp_benchmark.h  art_exp_benchmark.h  art_leis_benchmark.h  art_virt_benchmark.h  hash_table_benchmark.h  htrie_benchmark.h  mtrie_benchmark.h  rbtree_benchmark.h  sorted_list_benchmark.h  trie_benchmark.h
Implementation/data_structures/: CMakeLists.txt  data_structures.h  index_structure.h
Implementation/data_structures/art/: CMakeLists.txt  art.cpp  art.h  art_benchmark.h  node.cpp  node.h
Implementation/data_structures/art/node/: node.cpp  node.h  node16.cpp  node16.h  node256.cpp  node256.h  node4.cpp  node4.h  node48.cpp  node48.h  node_util.h
Implementation/data_structures/art_crtp/: CMakeLists.txt  art.cpp  art.h
Implementation/data_structures/art_crtp/node/: node.cpp  node.h  node16.cpp  node256.cpp  node4.cpp  node48.cpp
Implementation/data_structures/art_exp/: CMakeLists.txt  art.cpp  art.h
Implementation/data_structures/art_exp/node/: node.cpp  node.h  node16.cpp  node256.cpp  node4.cpp  node48.cpp  node_util.h
Implementation/data_structures/art_leis/: ARTshort.cpp  CMakeLists.txt
Implementation/data_structures/art_virt/: CMakeLists.txt  art.cpp  art.h
Implementation/data_structures/art_virt/node/: node.cpp  node.h  node16.cpp  node256.cpp  node4.cpp  node48.cpp
Implementation/data_structures/ctrie/: CMakeLists.txt  ctrie.cpp  ctrie.h  ctrie_benchmark.h
Implementation/data_structures/hash_table/: CMakeLists.txt  hash_table.cpp  hash_table.h  hash_table_benchmark.h
Implementation/data_structures/htrie/: CMakeLists.txt  htrie.cpp  htrie.h  htrie_benchmark.h
Implementation/data_structures/mtrie/: CMakeLists.txt  mtrie.cpp  mtrie.h  mtrie_benchmark.h
Implementation/data_structures/rbtree/: CMakeLists.txt  rbtree.cpp  rbtree.h  rbtree_benchmark.h
Implementation/data_structures/sorted_list/: CMakeLists.txt  sorted_list.cpp  sorted_list.h  sorted_list_benchmark.h
Implementation/data_structures/trie/: CMakeLists.txt  trie.cpp  trie.h  trie_benchmark.h
Implementation/test/: benchmark.h  data_structures.h  main.cpp  test.cpp
Implementation/test/structures/: art_benchmark.h  art_crtp_benchmark.h  art_exp_benchmark.h  art_leis_benchmark.h  art_virt_benchmark.h  hash_table_benchmark.h  htrie_benchmark.h  mtrie_benchmark.h  rbtree_benchmark.h  sorted_list_benchmark.h  trie_benchmark.h
Paper/: art.tex  refs.bib
Presentation/: The Adaptive Radix Tree.pptx
